UI: Add logo and CIA 12 header

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Control de Grupos y Remolques</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <div class="container">
         <!-- HEADER -->
         <header>
-            <h1>Control de Mantenimiento</h1>
+            <div class="logo-container">
+                <img src="logo.jpg" alt="CIA 12 Logo" class="logo">
+            </div>
+            <h1 class="main-title">CIA 12</h1>
+            <h2>Control de Mantenimiento</h2>
         </header>
 
         <!-- MAIN MENU VIEW -->
@@ -60,4 +66,5 @@
 
     <script src="app.js"></script>
 </body>
+
 </html>
